# afp-protocol

./: .gitignore  AGENTS.md  LICENSE  README.es.md  README.md  afp.json  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-schema-extensibility-and-versioning.md
docs/dogfooding/: 2026-05-30-initial-draft-review.md
docs/reviews/: 2026-06-04-architecture-evaluation.md
docs/superpowers/plans/: 2026-05-30-afp-phase1-reference-impl.md  2026-05-31-afp-gitlab-sink.md  (+2 more)
integrations/generic/: AFP-INSTRUCTIONS.md
spec/: README.md  SPEC.md
spec/vectors/: field_report.json  manifest.json  ownership.json  redaction.json
src/afp/: __init__.py  cli.py  discovery.py  enums.py  identity.py  integration_manager.py  manifest.py  models.py  onboarding.py  redact.py  validate.py
src/afp/sinks/: base.py  (+6 more)
tests/: conftest.py  test_cli.py  test_conformance_vectors.py  test_discovery.py  test_doctor_cli.py  test_drafts_discard.py  test_e2e.py  test_enums.py  test_idempotency.py  test_identity.py  test_init_cli.py  test_integration_assets.py  test_integrations_cli.py  test_manifest.py  test_models.py  test_redact.py  test_render.py  test_routing.py  test_schema_file.py  test_sinks_draft.py  test_sinks_github.py  test_sinks_gitlab.py  test_sinks_local.py  test_spec_sync.py  test_validate.py
tests/vectors/: invalid_missing_required.json  valid_minimal.json
ts/: README.md  package-lock.json  package.json  tsconfig.json
ts/schemas/: afp_manifest.schema.json
ts/src/: errors.ts  identity.ts  index.ts  ownership.ts  redact.ts  validate.ts
ts/test/: conformance.test.ts
(+10 files in other folders)
