[project]
name = "afp"
version = "0.2.0"
description = "Agent Feedback Protocol — reference implementation"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.21",
    "packageurl-python>=0.15",
    "typer>=0.12",
]

[project.scripts]
afp = "afp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/afp"]

[dependency-groups]
dev = ["pytest>=8"]
